Simplify some of the language in the financials outputs

--- a/public/investment_properties_pages/financials/outputs/financing_assumptions.html
+++ b/public/investment_properties_pages/financials/outputs/financing_assumptions.html
@@ -1,6 +1,6 @@
 <div id="financing-assumptions">
   <div class="row">
-    <div class="col-sm-24 subsection-header align-center">Financing Assumptions</div>
+    <div class="col-sm-24 subsection-header align-center">Financing</div>
   </div>
   <div class="row" id="total-purchase">
     <span class="col-sm-12">Total Purchase</span>
