--- a/public/investment_properties_pages/financials/outputs/cost_and_revenue_assumptions.html
+++ b/public/investment_properties_pages/financials/outputs/cost_and_revenue_assumptions.html
@@ -1,6 +1,6 @@
 <div id="cost-and-revenue-assumptions">
   <div class="row">
-    <div class="col-sm-24 subsection-header align-center">Cost and Revenue Assumptions</div>
+    <div class="col-sm-24 subsection-header align-center">Cost and Revenue</div>
   </div>
   <div class="row">
     <span class="col-sm-18">Land</span>
