--- a/public/investment_properties_pages/financials/outputs/key_rent_ratios.html
+++ b/public/investment_properties_pages/financials/outputs/key_rent_ratios.html
@@ -1,6 +1,6 @@
 <div id="key-rent-ratios">
   <div class="row">
-    <div class="col-sm-24 subsection-header align-center">Key Rent Ratios</div>
+    <div class="col-sm-24 subsection-header align-center">Key Numbers</div>
   </div>
   <div id="total-square-feet" class="row">
     <span class="col-sm-18">Total Square Feet</span>
