Remove the income and expenses projections from the output

--- a/public/investment_properties_pages/financials/outputs/operating_revenues.html
+++ b/public/investment_properties_pages/financials/outputs/operating_revenues.html
@@ -1,13 +1,7 @@
-<div id="operating-revenues" class="top-padded">
+<div id="operating-revenues">
   <div>
     <div class="row">
       <div class="col-sm-5 subsection-header align-center">Operating Revenues</div>
-      <div class="col-sm-2 col-sm-offset-2 subsection-header align-right">Monthly</div>
-      <div class="col-sm-3 subsection-header align-right">Year 1</div>
-      <div class="col-sm-3 subsection-header align-right">Year 2</div>
-      <div class="col-sm-3 subsection-header align-right">Year 3</div>
-      <div class="col-sm-3 subsection-header align-right">Year 4</div>
-      <div class="col-sm-3 subsection-header align-right">Year 5</div>
     </div>
     <div class="row">
       <div class="col-sm-5">Gross Scheduled Rent Income</div>
