--- a/public/investment_properties_pages/financials/rental_property.html
+++ b/public/investment_properties_pages/financials/rental_property.html
@@ -15,9 +15,16 @@
         <key-rent-ratios></key-rent-ratios>
       </div>
     </div>
+    <div class="row top-padded">
+      <div class="col-sm-2 col-sm-offset-7 subsection-header align-right">Monthly</div>
+      <div class="col-sm-3 subsection-header align-right">Year 1</div>
+      <div class="col-sm-3 subsection-header align-right">Year 2</div>
+      <div class="col-sm-3 subsection-header align-right">Year 3</div>
+      <div class="col-sm-3 subsection-header align-right">Year 4</div>
+      <div class="col-sm-3 subsection-header align-right">Year 5</div>
+    </div>
     <div class="row">
       <div class="col-sm-24">
-        <projections-header></projections-header>
         <operating-revenues></operating-revenues>
         <operating-expenses></operating-expenses>
         <net-operating-income></net-operating-income>
