--- a/public/investment_properties_pages/financials/outputs/return_on_investment.html
+++ b/public/investment_properties_pages/financials/outputs/return_on_investment.html
@@ -1,18 +1,21 @@
 <div id="return-on-investment" class="top-padded">
   <div class="row">
-    <div class="col-sm-5 align-center subsection-header no-bottom-border">Net Operating Income ROI</div>
+    <div class="col-sm-5 align-center subsection-header no-bottom-border">Return on Investment</div>
+  </div>
+  <div class="row">
+    <div class="col-sm-5 align-left">Net Operating Income</div>
     <div class="col-sm-2 align-right"></div>
     <div class="col-sm-2 align-right"></div>
     <div class="col-sm-3 align-right" ng-repeat="roi in noi_roi track by $index">{{roi | percentage:2}}</div>
   </div>
   <div class="row">
-    <div class="col-sm-5 align-center subsection-header no-bottom-border">Cash ROI</div>
+    <div class="col-sm-5 align-left">Cash ROI</div>
     <div class="col-sm-2 align-right"></div>
     <div class="col-sm-2 align-right"></div>
     <div class="col-sm-3 align-right" ng-repeat="roi in cash_roi track by $index">{{roi | percentage:2}}</div>
   </div>
   <div class="row">
-    <div class="col-sm-5 align-center subsection-header">Total ROI</div>
+    <div class="col-sm-5 align-left">Total ROI</div>
     <div class="col-sm-2 align-right"></div>
     <div class="col-sm-2 align-right"></div>
     <div class="col-sm-3 align-right" ng-repeat="roi in total_roi track by $index">{{roi | percentage:2}}</div>
