--- a/public/investment_properties_pages/financials/outputs/cost_and_revenue_assumptions.html
+++ b/public/investment_properties_pages/financials/outputs/cost_and_revenue_assumptions.html
@@ -4,23 +4,23 @@
   </div>
   <div class="row">
     <span class="col-sm-18">Land</span>
-    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.land_cost | currency}}</span>
+    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.land_cost | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Building</span>
-    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.building_cost | currency}}</span>
+    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.building_cost | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Improvements</span>
-    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.improvements | currency}}</span>
+    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.improvements | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Closing Costs</span>
-    <span class="col-sm-6 align-right add-border-bottom">{{total_closing_costs | currency}}</span>
+    <span class="col-sm-6 align-right add-border-bottom">{{total_closing_costs | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Total Cost</span>
-    <span class="col-sm-6 align-right">{{total_cost | currency}}</span>
+    <span class="col-sm-6 align-right">{{total_cost | currency:'$':0}}</span>
   </div>
   <br>
   <div class="row">
@@ -29,18 +29,18 @@
   </div>
   <div class="row">
     <span class="col-sm-18">Average Monthly Rent</span>
-    <span class="col-sm-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.average_monthly_rent_per_unit | currency}}</span>
+    <span class="col-sm-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.average_monthly_rent_per_unit | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Gross Monthly Rent</span>
-    <span class="col-sm-6 align-right">{{gross_monthly_rent | currency}}</span>
+    <span class="col-sm-6 align-right">{{gross_monthly_rent | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Other Income</span>
-    <span class="col-sm-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.other_monthly_income | currency}}</span>
+    <span class="col-sm-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.other_monthly_income | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Total Gross Monthly Income</span>
-    <span class="col-sm-6 align-right">{{total_gross_monthly_income | currency}}</span>
+    <span class="col-sm-6 align-right">{{total_gross_monthly_income | currency:'$':0}}</span>
   </div>
 </div>
