--- a/public/investment_properties_pages/navbar.html
+++ b/public/investment_properties_pages/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default navbar-static-top">
   <li class="property-address" ng-if="show_home_button()">
-    <a href="#" ng-click="go_home()">All Properties</a>
+    <a href="#" ng-click="go_home()" style="padding-left: 5px;">Home</a> |
   </li>
   <li class="property-address">{{address}}</li>
   <li class="float-right">
