--- a/public/investment_properties_pages/financials/inputs/inputs.html
+++ b/public/investment_properties_pages/financials/inputs/inputs.html
@@ -2,7 +2,7 @@
   <div class="col-sm-24 subsection-header align-center">Inputs</div>
 </div>
 <div class="row margin-top-sm">
-  <button class="btn btn-primary btn-sm" ng-click="save()">{{persistence_state}}</button>
+  <button class="btn btn-primary btn-sm btn-save" ng-click="save()">{{persistence_state}}</button>
 </div>
 <div class="margin-top-sm">
   <property-and-loan-information></property-and-loan-information>
