Add total price to the property summary

--- a/public/investment_properties_pages/properties_list/rental_properties.html
+++ b/public/investment_properties_pages/properties_list/rental_properties.html
@@ -8,6 +8,7 @@
       <th class="col-sm-1 subsection-header align-left">State</th>
       <th class="col-sm-1 subsection-header align-left">Zip Code</th>
       <th class="col-sm-1 subsection-header align-left">Cap Rate</th>
+      <th class="col-sm-1 subsection-header align-left">Total Cost</th>
       <th class="col-sm-1 subsection-header align-left">
         <button class="btn btn-primary btn-sm" ng-click="show_add_property_row()">New Property</button>
       </th>
