--- a/public/investment_properties_pages/properties_list/rental_properties.html
+++ b/public/investment_properties_pages/properties_list/rental_properties.html
@@ -7,6 +7,7 @@
       <th class="col-sm-1 subsection-header align-left">City</th>
       <th class="col-sm-1 subsection-header align-left">State</th>
       <th class="col-sm-1 subsection-header align-left">Zip Code</th>
+      <th class="col-sm-1 subsection-header align-left">Units</th>
       <th class="col-sm-1 subsection-header align-left">Cap Rate</th>
       <th class="col-sm-1 subsection-header align-left">Total Cost</th>
       <th class="col-sm-1 subsection-header align-left">
