Switch properties list from table to list based on divs

--- a/public/investment_properties_pages/properties_list/rental_properties.html
+++ b/public/investment_properties_pages/properties_list/rental_properties.html
@@ -1,30 +1,27 @@
 <div id="rental-properties" class="container flexbox-parent" ng-controller="RentalPropertiesListController">
   <navbar></navbar>
-  <table   class="table table-striped table-hover flexbox-item-grow">
-    <thead>
-    <tr class="row">
-      <th class="col-sm-2 subsection-header align-left">Street</th>
-      <th class="col-sm-1 subsection-header align-left">City</th>
-      <th class="col-sm-1 subsection-header align-left">State</th>
-      <th class="col-sm-1 subsection-header align-left">Zip Code</th>
-      <th class="col-sm-1 subsection-header align-left">Units</th>
-      <th class="col-sm-1 subsection-header align-left">Cap Rate</th>
-      <th class="col-sm-1 subsection-header align-left">Total Cost</th>
-      <th class="col-sm-1 subsection-header align-left">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="row" style="padding-bottom: 5px;">
         <button class="btn btn-primary btn-sm" ng-click="show_add_property_row()">New Property</button>
-      </th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr id="new-property-row" class="row rental-property-summary" ng-if="show_new_property_row">
-      <td class="row" colspan="5">
+    </div>
+    <div class="row">
+      <div class="col-sm-2 subsection-header align-left">Street</div>
+      <div class="col-sm-2 subsection-header align-left">City</div>
+      <div class="col-sm-1 subsection-header align-left">State</div>
+      <div class="col-sm-1 subsection-header align-left">Zip Code</div>
+      <div class="col-sm-1 subsection-header align-right">Units</div>
+      <div class="col-sm-1 subsection-header align-right">Cap Rate</div>
+      <div class="col-sm-1 subsection-header align-right">Total Cost</div>
+      <div class="col-sm-3 subsection-header align-right">Actions</div>
+    </div>
+    <div id="new-property-row" class="row rental-property-summary" ng-if="show_new_property_row">
+      <div class="row" colspan="5">
         <new-property-drawer></new-property-drawer>
-      </td>
-    </tr>
-    <tr rental-property-summary="property"
+      </div>
+    </div>
+    <div rental-property-summary="property"
         remove="remove(id)"
         ng-repeat="property in rental_properties">
-    </tr>
-    </tbody>
-  </table>
+    </div>
+  </div>
 </div>
