--- a/public/investment_properties_pages/properties_list/rental_property_summary.html
+++ b/public/investment_properties_pages/properties_list/rental_property_summary.html
@@ -3,10 +3,10 @@
   <div class="col-sm-2 add-border-bottom" ng-click="goToProperty(property.id)">{{property.city}}</div>
   <div class="col-sm-1 add-border-bottom" ng-click="goToProperty(property.id)">{{property.state}}</div>
   <div class="col-sm-1 add-border-bottom" ng-click="goToProperty(property.id)">{{property.zip_code}}</div>
-  <div class="col-sm-1 add-border-bottom" ng-click="goToProperty(property.id)">{{property.financing_and_income_assumption.number_of_units | number:0}}</div>
-  <div class="col-sm-1 add-border-bottom" ng-click="goToProperty(property.id)">{{cap_rate | percentage:2}}</div>
-  <div class="col-sm-1 add-border-bottom" ng-click="goToProperty(property.id)">{{total_cost | currency:'$':0}}</div>
-  <div class="col-sm-3 add-border-bottom">
+  <div class="col-sm-1 add-border-bottom align-right" ng-click="goToProperty(property.id)">{{property.financing_and_income_assumption.number_of_units | number:0}}</div>
+  <div class="col-sm-1 add-border-bottom align-right" ng-click="goToProperty(property.id)">{{cap_rate | percentage:2}}</div>
+  <div class="col-sm-1 add-border-bottom align-right" ng-click="goToProperty(property.id)">{{total_cost | currency:'$':0}}</div>
+  <div class="col-sm-3 add-border-bottom align-right">
     <span class="action glyphicon glyphicon-remove delete-property" ng-click="remove({id: property.id})"></span>
   </div>
 </div>
