Speed up the journeys by ~20s

--- a/public/investment_properties_pages/financials/rental_property.html
+++ b/public/investment_properties_pages/financials/rental_property.html
@@ -15,7 +15,7 @@
         <key-rent-ratios></key-rent-ratios>
       </div>
     </div>
-    <div class="row top-padded">
+    <div id="time-row" class="row top-padded">
       <div class="col-sm-2 col-sm-offset-7 subsection-header align-right">Monthly</div>
       <div class="col-sm-3 subsection-header align-right">Year 1</div>
       <div class="col-sm-3 subsection-header align-right">Year 2</div>
