--- a/public/investment_properties_pages/properties_list/rental_properties.html
+++ b/public/investment_properties_pages/properties_list/rental_properties.html
@@ -1,7 +1,7 @@
 <div id="rental-properties" class="container flexbox-parent" ng-controller="RentalPropertiesListController">
   <navbar/>
 
-  <div class="col-md-10 col-md-offset-1">
+  <div class="rental-properties-list col-md-10 col-md-offset-1">
     <div class="row" style="padding-bottom: 5px;">
         <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#my-modal">New Property</button>
     </div>
