--- a/public/investment_properties_pages/navbar.html
+++ b/public/investment_properties_pages/navbar.html
@@ -1,8 +1,11 @@
 <div class="navbar navbar-default navbar-static-top">
   <li class="property-address" ng-if="show_home_button()">
-    <a href="#" ng-click="go_home()" style="padding-left: 5px;">Home</a> |
+    <a ui-sref="rental_properties" style="padding-left: 5px;">Home</a> |
   </li>
   <li class="property-address">{{address}}</li>
+  <li class="property-address">
+    <a ui-sref="questionnaire({rental_id: rental_property.id})">Questionnaire</a>
+  </li>
   <li class="float-right">
     <span class="logged-in-user">{{logged_in_user}}</span>
     <button class="btn btn-default btn-sm" ng-click="signOut()">Sign Out</button>
