Extract save button to a directive

--- a/public/investment_properties_pages/financials/inputs/inputs.html
+++ b/public/investment_properties_pages/financials/inputs/inputs.html
@@ -1,9 +1,7 @@
 <div class="row">
   <div class="col-sm-24 subsection-header align-center">Inputs</div>
 </div>
-<div class="row margin-top-sm">
-  <button class="btn btn-primary btn-sm btn-save" ng-click="save()">{{persistence_state}}</button>
-</div>
+<save-button rental-id="rental_id" rental-property="rental_property"></save-button>
 <div class="margin-top-sm">
   <property-and-loan-information></property-and-loan-information>
   <operating-expenses-inputs></operating-expenses-inputs>
