--- a/public/investment_properties_pages/questionnaire.html
+++ b/public/investment_properties_pages/questionnaire.html
@@ -1,8 +1,6 @@
 <div class="container">
   <navbar></navbar>
-  <div class="row margin-top-sm">
-    <button class="btn btn-primary btn-sm btn-save" ng-click="save()">{{persistence_state}}</button>
-  </div>
+  <save-button rental-id="rental_id" rental-property="rental_property"></save-button>
   <div ng-repeat="question in questions">
     <div>{{question.prompt}}</div>
     <textarea name="{{question.name}}" cols="30" rows="10" ng-model="rental_property.questionnaire[question.field]"></textarea>
