--- a/public/investment_properties_pages/navbar.html
+++ b/public/investment_properties_pages/navbar.html
@@ -1,13 +1,13 @@
 <div class="navbar navbar-default navbar-static-top">
   <li class="property-address" ng-if="show_property_buttons()">
-    <a ui-sref="rental_properties" style="padding-left: 5px;">Home</a> |
+    <a ui-sref="rental_properties" style="padding-left: 5px;">Home</a>
   </li>
   <li class="property-address" ng-if="address">{{address}}</li>
   <li class="questionnaire-link" ng-if="show_property_buttons()">
     <a ui-sref="questionnaire({rental_id: rental_property.id})">Questionnaire</a>
   </li>
   <li class="financials-link" ng-if="show_property_buttons()">
-    <a ui-sref="rental_property({rental_id: rental_property.id})">Financials</a>
+    <a ui-sref="financials({rental_id: rental_property.id})">Financials</a>
   </li>
   <li class="float-right">
     <span class="logged-in-user">{{logged_in_user}}</span>
