--- a/styleguide/styleguide_assets/_header.html
+++ b/styleguide/styleguide_assets/_header.html
@@ -18,18 +18,17 @@
   </head>
   <body style="background-color: whitesmoke;">
     <div>
-      <nav>
+      <nav class="navbar">
         <ul>
         <% @categories.each do |category, file_name| %>
-          <li><a href="<%= file_name %>"><%= category %></a></li>
+          <li style="float: left; padding-right: 5px;"><a href="<%= file_name %>"><%= category %></a></li>
         <% end %>
         </ul>
       </nav>
 
-      <h1>The Investment Properties Styleguide</h1>
-      <section class="content" style="width: 80%; margin: auto;">
+      <section class="content clearfix" style="width: 80%; margin: auto;">
         <ul>
         <% @blocks.each do |b| %>
-          <li><a href="#<%= b[:name] %>"><%= b[:title] %></a></li>
+          <li style="float: left; padding-right: 5px;"><a href="#<%= b[:name] %>"><%= b[:title] %></a></li>
         <% end %>
         </ul>
