Use sass gem for styleguide styles compilation

--- a/styleguide/styleguide_assets/_header.html
+++ b/styleguide/styleguide_assets/_header.html
@@ -2,7 +2,7 @@
 <html style="background-color: whitesmoke;">
   <head>
     <title>Investment Properties Styleguide: <%= title %></title>
-    <link rel="stylesheet" href="./css/application.css.css">
+    <link rel="stylesheet" href="./css/application.css">
     <style>
       .swatch-item {
         height: 200px;
