--- a/public/user_registrations/new.html
+++ b/public/user_registrations/new.html
@@ -1,41 +1,43 @@
-<div class="faux-modal">
-  <div class="centered">
-    <form ng-submit="handleRegBtnClick()" role="form" ng-init="registrationForm = {}">
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email"
-               name="email"
-               id="email"
-               ng-model="registrationForm.email"
-               required="required"
-               class="form-control">
-      </div>
+<div class="centerer flexbox-parent">
+  <div class="faux-modal">
+    <div class="auth-modal">
+      <form ng-submit="handleRegBtnClick()" role="form" ng-init="registrationForm = {}">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email"
+                 name="email"
+                 id="email"
+                 ng-model="registrationForm.email"
+                 required="required"
+                 class="form-control">
+        </div>
 
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password"
-               name="password"
-               id="password"
-               ng-model="registrationForm.password"
-               required="required"
-               class="form-control">
-      </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password"
+                 name="password"
+                 id="password"
+                 ng-model="registrationForm.password"
+                 required="required"
+                 class="form-control">
+        </div>
 
-      <div class="form-group">
-        <label for="password_confirmation">Confirm Password</label>
-        <input type="password"
-               name="password_confirmation"
-               id="password_confirmation"
-               ng-model="registrationForm.password_confirmation"
-               required="required"
-               class="form-control">
-      </div>
+        <div class="form-group">
+          <label for="password_confirmation">Confirm Password</label>
+          <input type="password"
+                 name="password_confirmation"
+                 id="password_confirmation"
+                 ng-model="registrationForm.password_confirmation"
+                 required="required"
+                 class="form-control">
+        </div>
 
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-sm sign-in-btn">Register</button>
-      </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary btn-sm sign-in-btn">Register</button>
+        </div>
 
-      <div class="invalid-credentials">{{error_message}}</div>
-    </form>
+        <div class="invalid-credentials">{{error_message}}</div>
+      </form>
+    </div>
   </div>
 </div>
