Increase overall font size

--- a/public/investment_properties_pages/properties_list/rental_properties.html
+++ b/public/investment_properties_pages/properties_list/rental_properties.html
@@ -9,10 +9,10 @@
       <div class="col-sm-2 subsection-header align-left">Street</div>
       <div class="col-sm-2 subsection-header align-left">City</div>
       <div class="col-sm-1 subsection-header align-left">State</div>
-      <div class="col-sm-1 subsection-header align-left">Zip Code</div>
+      <div class="col-sm-1 subsection-header align-left">Zip</div>
       <div class="col-sm-1 subsection-header align-right">Units</div>
       <div class="col-sm-1 subsection-header align-right">Cap Rate</div>
-      <div class="col-sm-1 subsection-header align-right">Total Cost</div>
+      <div class="col-sm-1 subsection-header align-right">Cost</div>
       <div class="col-sm-3 subsection-header align-right">Actions</div>
     </div>
     <div rental-property-summary="property"
