--- a/public/investment_properties_pages/properties_list/rental_properties.html
+++ b/public/investment_properties_pages/properties_list/rental_properties.html
@@ -21,6 +21,6 @@
     </div>
   </div>
 
-  <new-property-modal/>
+  <new-property-modal cancel="cancel" create-property="save_new_property"/>
 </div>
 
