Focus on the street address text input when the new property dialog opens

--- a/public/investment_properties_pages/properties_list/new_property_modal.html
+++ b/public/investment_properties_pages/properties_list/new_property_modal.html
@@ -15,8 +15,8 @@
                          type="text"
                          name="new_property_street"
                          placeholder="1524 Mulberry Street"
-                         ng-change="changed()"
-                         ng-model="new_property.street">
+                         ng-model="new_property.street"
+                         autofocus>
                 </div>
                 <div class="col-sm-3 less-spaced">
                   <input class="col-sm-12"
