--- a/public/investment_properties_pages/properties_list/rental_properties.html
+++ b/public/investment_properties_pages/properties_list/rental_properties.html
@@ -13,7 +13,8 @@
       <div class="col-sm-1 subsection-header align-right">Units</div>
       <div class="col-sm-1 subsection-header align-right">Cap Rate</div>
       <div class="col-sm-1 subsection-header align-right">Cost</div>
-      <div class="col-sm-3 subsection-header align-right">Actions</div>
+      <div class="col-sm-1 subsection-header align-right">CoC ROI</div>
+      <div class="col-sm-2 subsection-header align-right">Actions</div>
     </div>
     <div rental-property-summary="property"
         remove="remove(id)"
