Remove even more dead code

--- a/public/investment_properties_pages/properties_list/rentalPropertiesList.html
+++ b/public/investment_properties_pages/properties_list/rentalPropertiesList.html
@@ -22,6 +22,6 @@
     </div>
   </div>
 
-  <new-property-modal cancel="cancel" create-property="save_new_property"/>
+  <new-property-modal create-property="save_new_property"/>
 </div>
 
