Rename rental_id to rentalId on the front end everywhere

--- a/public/investment_properties_pages/financials/inputs/inputs.html
+++ b/public/investment_properties_pages/financials/inputs/inputs.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-24 subsection-header align-center">Inputs</div>
 </div>
-<save-button rental-id="rental_id" rental-property="rental_property"></save-button>
+<save-button rental-id="rentalId" rental-property="rental_property"></save-button>
 <div class="margin-top-sm">
   <property-and-loan-information></property-and-loan-information>
   <operating-expenses-inputs></operating-expenses-inputs>
