--- a/public/investment_properties_pages/questionnaire.html
+++ b/public/investment_properties_pages/questionnaire.html
@@ -3,7 +3,7 @@
   <div class="questionnaire">
     <div class="row">
       <div class="col-sm-2">
-        <save-button rental-id="rental_id" rental-property="rental_property"></save-button>
+        <save-button rental-id="rentalId" rental-property="rental_property"></save-button>
       </div>
     </div>
     <div class="row">
