Rename rental_properties route to rental-properties

--- a/public/investment_properties_pages/navbar.html
+++ b/public/investment_properties_pages/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default navbar-static-top">
   <li class="property-address" ng-if="show_property_buttons()">
-    <a ui-sref="rental_properties" style="padding-left: 5px;">Home</a>
+    <a ui-sref="rental-properties" style="padding-left: 5px;">Home</a>
   </li>
   <li class="property-address" ng-if="address">{{address}}</li>
   <li class="questionnaire-link" ng-if="show_property_buttons()">
