Rename registration error_message to camel case

--- a/public/user_registrations/new.html
+++ b/public/user_registrations/new.html
@@ -36,7 +36,7 @@
           <button type="submit" class="btn btn-primary btn-sm sign-in-btn">Register</button>
         </div>
 
-        <div class="invalid-credentials">{{error_message}}</div>
+        <div class="invalid-credentials">{{errorMessage}}</div>
       </form>
     </div>
   </div>
