--- a/public/investment_properties_pages/financials/outputs/costAndRevenueAssumptions.html
+++ b/public/investment_properties_pages/financials/outputs/costAndRevenueAssumptions.html
@@ -16,11 +16,11 @@
   </div>
   <div class="row">
     <span class="col-sm-18">Closing Costs</span>
-    <span class="col-sm-6 align-right add-border-bottom">{{total_closing_costs | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right add-border-bottom">{{totalClosingCosts | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Total Cost</span>
-    <span class="col-sm-6 align-right">{{total_cost | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right">{{totalCost | currency:'$':0}}</span>
   </div>
   <br>
   <div class="row">
@@ -33,7 +33,7 @@
   </div>
   <div class="row">
     <span class="col-sm-18">Gross Monthly Rent</span>
-    <span class="col-sm-6 align-right">{{gross_monthly_rent | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right">{{grossMonthlyRent | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Other Income</span>
@@ -41,6 +41,6 @@
   </div>
   <div class="row">
     <span class="col-sm-18">Total Gross Monthly Income</span>
-    <span class="col-sm-6 align-right">{{total_gross_monthly_income | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right">{{totalGrossMonthlyIncome | currency:'$':0}}</span>
   </div>
 </div>
